# nu_plugin_prometheus

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.cargo/: mutants.toml
.github/: dependabot.yml
.github/workflows/: publish.yaml  rust.yml
src/: client.rs  main.rs  plugin.rs  prometheus.rs  query.rs  signals.rs  source.rs  sub_command.rs
src/client/: label_names.rs  label_names_builder.rs  label_values.rs  label_values_builder.rs  labels_builder.rs  metric_metadata.rs  parse.rs  query.rs  query_builder.rs  query_instant.rs  query_range.rs  scrape.rs  selector_parser.rs  series.rs  targets.rs
src/prometheus/: label_command.rs  label_names_command.rs  label_values_command.rs  labels_command.rs  metric_metadata_command.rs  parse_command.rs  prometheus_command.rs  query_command.rs  query_range_command.rs  scrape_command.rs  series_command.rs  sources_command.rs  targets_command.rs
test/fixtures/: cert.pem  key.pem
