[package]
name = "nu_plugin_prometheus"
version = "0.9.0"
edition = "2021"

authors = ["Eric Hodel <drbrain@segment7.net>"]
description = "A nushell plugin for querying prometheus"
homepage = "https://github.com/drbrain/nu_plugin_prometheus"
license = "MIT"
readme = "README.md"
repository = "https://github.com/drbrain/nu_plugin_prometheus"
keywords = ["nu", "plugin", "prometheus"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
nom = "8"
nom-language = "0.1"
nom-openmetrics = "0.2.0"
nu-plugin = "0.104.0"
nu-protocol = { version = "0.104.0", features = [ "plugin" ] }
prometheus-http-query = "0.8.3"
reqwest = { version = "0.12.15", features = [ "native-tls" ] }
tokio = { version ="1.48.0", features = [ "macros", "rt" ] }

[dev-dependencies]
rstest = { version = "0.25", default-features = false }
serde = "1.0.219"
serde_json = "1.0.140"
