[package]
name = "nu_plugin_prometheus"
version = "0.11.0"
edition = "2024"

authors = ["Eric Hodel <drbrain@segment7.net>"]
description = "A nushell plugin for querying prometheus"
homepage = "https://github.com/drbrain/nu_plugin_prometheus"
license = "MIT"
readme = "README.md"
repository = "https://github.com/drbrain/nu_plugin_prometheus"
keywords = ["nu", "plugin", "prometheus"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.42"
nom = "8"
nom-language = "0.1"
nom-openmetrics = "0.2.0"
nu-plugin = "0.110.0"
nu-protocol = { version = "0.110.0", features = [ "plugin" ] }
prometheus-http-query = "0.8.3"
reqwest = { version = "0.12.28", features = [ "native-tls" ] }
tokio = { version ="1.49.0", features = [ "macros", "rt" ] }

[dev-dependencies]
rstest = { version = "0.26", default-features = false }
serde = "1.0.228"
serde_json = "1.0.149"
